# DjNotificationsManager

./: MANIFEST.in  README.rst  manage.py  setup.cfg
dj_notifications/: asgi.py  settings.py  urls.py  wsgi.py
dj_notifications_manager/: apps.py
